extend export command to download all translations
Co-authored-by: Philipp Pfeil <p.pfeil@sprinteins.com>